--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
     "webpack-cli": "5.1.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.3.1",
     "webpack-dev-server": "5.0.4"
   },
   "engines": {
@@ -42,6 +49,7 @@
   "packageManager": "yarn@3.6.3",
   "scripts": {
     "build": "./node_modules/esbuild/bin/esbuild ./app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
-    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "test": "jest"
   }
 }
